...
    case invoices = "Invoices"
    case customers = "Customers"
    case accounting = "Accounting"
    case reports = "Reports"
    case accountsReceivable = "AR"
    case memoReturn = "Memo Return"
    case settings = "Settings"

    var icon: String {
        switch self {
        case .dashboard:  return "chart.bar.fill"
        case .diamonds:   return "sparkle"
        case .gemstones:  return "aqi.medium"
...
